syntax = "proto3";

option java_package = "alejandro.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "FileServiceProto";

service FileService {
    rpc ProcessFile (FileRequest) returns (FileResponse);
    rpc Ping (PingRequest) returns (PingResponse);
}

message FileRequest {
    string fileName = 1;
    bytes fileData = 2;
    string uid = 3;
}

message FileResponse {
    string message = 1;
    bool success = 2;
}

message PingRequest { }

message PingResponse {
    string message = 1;
}